@@ -1,3 +1,9 @@
+2003-05-03  Per Bothner  <per@bothner.com>
+
+	* CallContext.java.in:  Renamed back to ...
+	* CallContext.java:  and checked to use new JAVA1/JAVA2 switching.
+	* Makefile.am:  Update accordingly.
+
 2003-04-08  Per Bothner  <per@bothner.com>
 
 	* Symbol.java (defineValue):  Check for null env.
